@@ -1,3 +1,10 @@
+2002-07-19  Vince Darley  <vincentdarley@users.sourceforge.net>
+
+	* generic/tclIOUtil.c: fix to GetFilesystemRecord
+	* win/tclWinFile.c:
+	* unix/tclUnixFile.c: fix to subtle problem with links shown
+	up by latest tclkit builds.
+
 2002-07-19  Mo DeJong  <mdejong@users.sourceforge.net>
 
 	* unix/configure:
